firefox-3.0 (3.0~b5~cvs20080313t1324+nobinonly-0ubuntu1) UNRELEASED; urgency=low

  * Bump xulrunner-1.9 dependencies to b5
    - update debian/control
  * Make Depends even stricter for xulrunner-1.9 (LP: #201961)
    - update debian/control

 -- Fabien Tassin <fta@sofaraway.org>  Thu, 13 Mar 2008 22:07:23 +0100

firefox-3.0 (3.0~b4+nobinonly-0ubuntu1) hardy; urgency=low

  [ Fabien Tassin <fta@sofaraway.org> ]
  * Bump xulrunner-1.9 dependencies to b4
    - update debian/control
  * Refresh diverged patches:
    - update debian/patches/dont_depend_on_nspr_sources.patch
    - update debian/patches/force_safebrowsing_off.patch
  * Drop extension from desktop launchers icons (LP: #190688)
    - update debian/firefox-3.0-*.desktop
  * Install new libjemalloc.so
    - update debian/firefox-3.0.install
  * Add optional support for system sqlite3 (we need >= 3.5 not in hardy)
    - update debian/rules
  * Fix debsearch.src to work with new packages.ubuntu.com codebase (LP: #194681)
    Contributed by David Futcher <bobbocanfly@gmail.com>
    - update debian/debsearch.src
  * Bump gtk+ requirement to 2.10 because of the new Print Dialog
    - update debian/control
  * Add Polish translation to deskstop launcher (LP: #196953)
    Contributed by Tomasz Dominikowski <dominikowski@gmail.com>
    - update debian/firefox-3.0-final.desktop
  * Change $(shell) into $(wildcard) for XUL SDK detection
    - update debian/rules
  * Drop DEB_AUTO_UPDATE_DEBIAN_CONTROL cdbs variable completely. It was
    wrongly set to zero
    - update debian/rules
  * Stop build-tree/mozilla/README to be shipped as a doc by setting
    cdbs DEB_INSTALL_DOCS_ALL to $(NULL)
    - update debian/rules

  [ Alexander Sack <asac@ubuntu.com> ]
  * reuse apport hook from firefox 2 package initially developed by Hilario J.
    Montoliu <hmontoliu@gmail.com> (LP: #199666)
    - add debian/apport/firefox-3.0.py
    - update debian/firefox-3.0.install
