@@ -7,11 +7,11 @@ Index: mozilla/config/Makefile.in
 ===================================================================
 --- mozilla.orig/config/Makefile.in
 +++ mozilla/config/Makefile.in
-@@ -121,17 +121,17 @@
- 		-DBUILD_STATIC_LIBS=$(BUILD_STATIC_LIBS) \
+@@ -122,17 +122,17 @@
  		-DMOZ_TREE_CAIRO=$(MOZ_TREE_CAIRO) \
  		-DMOZ_ENABLE_LIBXUL=$(MOZ_ENABLE_LIBXUL) \
  		-DMOZ_NATIVE_HUNSPELL=$(MOZ_NATIVE_HUNSPELL) \
+ 		-DMOZ_NATIVE_BZ2=$(MOZ_NATIVE_BZ2) \
  		-DMOZ_NATIVE_ZLIB=$(MOZ_NATIVE_ZLIB) \
  		-DMOZ_NATIVE_PNG=$(MOZ_NATIVE_PNG) \
  		-DMOZ_NATIVE_JPEG=$(MOZ_NATIVE_JPEG) \
