@@ -1,11 +1,15 @@
 ---
  configure.in                   |   21 +++-----------
 
+---
+ configure.in |   21 +++++----------------
+ 1 file changed, 5 insertions(+), 16 deletions(-)
+
 Index: mozilla/configure.in
 ===================================================================
 --- mozilla.orig/configure.in
 +++ mozilla/configure.in
-@@ -3872,32 +3872,33 @@
+@@ -3920,32 +3920,33 @@
      AC_TRY_COMPILE([#include "prlog.h"],
                  [#ifndef PR_STATIC_ASSERT
                   #error PR_STATIC_ASSERT not defined
@@ -41,11 +45,11 @@ Index: mozilla/configure.in
  dnl = use the one in the source tree (mozilla/security/nss)
  dnl ========================================================
  
-@@ -7617,17 +7618,19 @@
- AC_SUBST(MOZ_JPEG_CFLAGS)
- AC_SUBST(MOZ_JPEG_LIBS)
+@@ -7732,17 +7733,19 @@
  AC_SUBST(MOZ_ZLIB_CFLAGS)
  AC_SUBST(MOZ_ZLIB_LIBS)
+ AC_SUBST(MOZ_BZ2_CFLAGS)
+ AC_SUBST(MOZ_BZ2_LIBS)
  AC_SUBST(MOZ_PNG_CFLAGS)
  AC_SUBST(MOZ_PNG_LIBS)
  
@@ -61,7 +65,7 @@ Index: mozilla/configure.in
  AC_SUBST(MOZ_NATIVE_NSS)
  
  AC_SUBST(CFLAGS)
-@@ -7961,30 +7964,16 @@
+@@ -8075,30 +8078,16 @@
      fi
      if test -n "$HAVE_64BIT_OS"; then
          ac_configure_args="$ac_configure_args --enable-64bit"
