@@ -4,6 +4,9 @@ firefox-3.0 (3.0~b5~cvs20080313t1324+nobinonly-0ubuntu1) UNRELEASED; urgency=low
     - update debian/control
   * Make Depends even stricter for xulrunner-1.9 (LP: #201961)
     - update debian/control
+  * Refresh diverged patches:
+    - update debian/patches/dont_depend_on_nspr_sources.patch
+    - update debian/patches/nspr_flags_by_pkg_config_hack.patch
 
  -- Fabien Tassin <fta@sofaraway.org>  Thu, 13 Mar 2008 22:07:23 +0100
 
